--- a/static/css/CWE.css
+++ b/static/css/CWE.css
@@ -1,3 +1,4 @@
+@charset "utf-8";
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     background-color: #f4f7f9;
