--- a/static/css/CWE.css
+++ b/static/css/CWE.css
@@ -22,6 +22,9 @@ a { color: #007bff; }
     padding: 1em;
     border-radius: 4px;
     min-height: 50px;
+    white-space: pre-wrap; /* 공백을 유지하면서 자동 줄 바꿈을 허용합니다. */
+    word-wrap: break-word; /* 긴 단어나 URL이 박스를 넘어가지 않도록 강제로 줄 바꿈합니다. */
+    word-break: break-all;
 }
         /* 팝업(모달) 스타일 */
 .modal {
