--- a/templates/A01/CWE-22.html
+++ b/templates/A01/CWE-22.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CWE-22: Path Traversal</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/CWE.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/cwe-22.css') }}">
 </head>
 <body>
     <div class="container">
